<resources>
    <string name="app_name">Ezooma Caterer</string>
    <string name="_3ezooma">3ezooma</string>
    <string name="txt_don_t_have_an_account_sign_up"><font fgcolor='#000000'>Don\'t have an account?</font><font fgcolor='#FF4713'> Sign up.</font></string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">Continue with Facebook</string>
    <string name="login">Login</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_phone_number">Phone Number</string>
    <string name="txt_or_sign_up_with_a_social_media">OR SIGN UP WITH A SOCIAL MEDIA</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_sign_up">Create an account</string>
    <string name="txt_already_have_an_account_log_in"><font fgcolor="#000000">Already have an Account?</font> <font fgcolor="#F86C03">Login</font></string>
    <string name="register">Register</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_just_need_your_registered_email_id_to_sent_your_password_reset_instructions">We just need your registered Email Id to sent your password reset instructions.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_using_email">Sign up using email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="create_account">Create account</string>
    <string name="add_npicture">Add Picture</string>
    <string name="about_us">About us</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_orders">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="find_caterers">Find Caterers</string>
    <string name="trending_caterers">Trending Caterers</string>
    <string name="see_all_37">See all (37)</string>
    <string name="categories">Categories</string>
    <string name="open">Open</string>
    <string name="view_my_cart">View My Cart</string>
    <string name="_2_delivery_days">2 delivery days</string>
    <string name="min_15_persons">Min. 15 persons</string>
    <string name="photos">Photos</string>
    <string name="menu">Menu</string>
    <string name="nav_change_password">Change password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_about_us">About Us</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_with_email">Login with email</string>
    <string name="orders">Orders</string>
    <string name="profile">profile</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="save">Save</string>
    <string name="review_and_ratings">Review and ratings</string>
    <string name="hint_owner_name">Owner Name</string>
    <string name="hint_business_name">Business Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_services">Services</string>
    <string name="hint_minimum_persons">Minimum Persons</string>
    <string name="hint_delivery_days">Delivery days</string>
    <string name="hint_availability_days">Availability Days</string>
    <string name="hint_timings">Timings</string>
    <string name="hint_open_timing">Open timing</string>
    <string name="hint_closing_timing">Closing timing</string>
    <string name="error_something_went_wrong">Something went wrong.</string>
    <string name="error__owner_name">owner name cannot be empty.</string>
    <string name="error_business_name">business name cannot be empty.</string>
    <string name="error_email">email cannot be empty.</string>
    <string name="error_email_format">email format isn\'t correct.</string>
    <string name="error_address">address cannot be empty.</string>
    <string name="error_contact_number">Contact number cannot be empty.</string>
    <string name="error_service_list">please select the service you will offer.</string>
    <string name="error_minimum_persons">Minimum persons cannot be empty.</string>
    <string name="error_delivery_days">Delivery days cannot be empty.</string>
    <string name="error_deliverydays_list">please select the delivery days.</string>
    <string name="error_open_timings">Please select open timings.</string>
    <string name="error_closing_timings">Please select closing timings.</string>
    <string name="error_password">Password cannot be empty</string>
    <string name="error_password_length">password length must be greater than 5</string>
    <string name="error_confirm_password">Confirm password cannot be empty</string>
    <string name="error_password_match">Password doesn\'t match</string>
    <string name="error_location">Please select your location</string>
    <string name="alert">Alert</string>
    <string name="progress_message">Please wait</string>
    <string-array name="array_name">
        <item>Choose parent category</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string-array name="category_array_name">
        <item>Choose item category</item>
        <item>Array Item Two</item>
        <item>Array Item Three</item>
    </string-array>
    <string-array name="order_status_array_name">
        <item>Preparing order</item>
        <item>Order will be delivered tomorrow</item>
        <item>Order on the way</item>
        <item>Order delivered</item>
    </string-array>
    <string name="need_permission">Need Permissions</string>
    <string name="need_permission_detail">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="error_occured">Error occurred!</string>
    <string name="write_item_description">Write item description</string>
    <string name="item_price">Item price</string>
    <string name="enter_item_name">Enter item name</string>
</resources>